# PoseLibC

./: CMakeLists.txt  README_BUILD_AND.md
PoseLib/: poselib_c_api.cc  poselib_c_api.h
